--- a/recipes/truffle-pasta.html
+++ b/recipes/truffle-pasta.html
@@ -33,8 +33,10 @@
 
 <ul> Sources
     <li> <a href="https://whereismyspoon.co/truffle-pasta/#4-what-do-you-need" target="_blank" rel="noopener noreferrer">Fresh Black Truffle pasta </a> </li>
+    <li> ChatGPT</li>
 </ul>
 
+<a href="../index.html">Return to Home Page</a>
 
 </body>
 </html>
