fix typos and add new photo

--- a/recipes/chicken-donair.html
+++ b/recipes/chicken-donair.html
@@ -6,8 +6,8 @@
     <title>Donair Style Chicken</title>
 </head>
 <body>
-    <h1> <strong>Donair Style Chicken Recipe </strong></h1>
-    <img src="../images/chicken-donair.jpg.crdownload" width="310" height="310">
+    <h1> <strong>Doner Style Chicken Recipe </strong></h1>
+    <img src="../images/Chicken Doner Platter.jpg" width="310" height="310">
     <h2> <em>Ingredients</em> </h2>
 
     <ul>
@@ -54,9 +54,9 @@
     <p> 12. Mix Rice with diced tomatoes and cucumber; add hummus aswell </p>
     <p> dish chicken on rice and voila!</p>
 
-    <h4> <em>Why Chicken Donair?</em></h4>
+    <h4> <em>Why Chicken Doner?</em></h4>
 
-    <p> Chicken Donair is a perfect dish for post-workouts, quick bites with friends, and more! typically they can be pretty affordable, however in some instances they can 
+    <p> Chicken Doner is a perfect dish for post-workouts, quick bites with friends, and more! typically they can be pretty affordable, however in some instances they can 
         appear a little pricey. Hopefully this home cooked meal can bring you joy! </p>
 <h5> <strong>Sources</strong></h5>
 <ul>
