--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris's Recipes</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Chris's Recipes</h1>
-    <img src="images/chicken-donair.jpg.crdownload" width="310" height="310">
+    <img src="images/Chicken Doner Platter.jpg" width="310" height="310">
     <img src="images/Truffle-Pasta.jpg" width="310" height="310">
     <ul>
-    <a href="recipes/chicken-donair.html">Donair Chicken</a>
+    <a href="recipes/chicken-donair.html">Doner Chicken</a>
     <a href="recipes/truffle-pasta.html">Truffle Pasta</a>
     </ul>
 </body>
